[FIX] web_enterprise: apply list view style in x2many
This commit fixes a selector that hadn't been correctly adapted
w.r.t. the new owl list view. As a consequence, those rules only
applied on main list views, but not on x2many lists. This implied
several issues (scrollbars, th borders...).

closes odoo/enterprise#31033

Related: odoo/odoo#99503

--- a/web_enterprise/static/src/views/list/list_view.scss
+++ b/web_enterprise/static/src/views/list/list_view.scss
@@ -45,7 +45,7 @@
 }
 
 // Common style for list views (also inside form views)
-.o_list_view .o_list_table {
+.o_list_renderer .o_list_table {
     // We need this to be collapse because we want to add a border on the rows
     // for sale order/invoice lines of type section.
     border-collapse: collapse;
